Fix weird issue with codeblock alignment when it's placed next to a foldable admonition in some edge cases

--- a/packages/webview_utils/src/features/mdx/embeddable_mdx_components/auto_inserted/auto_inserted_code_block/code_block_styles.scss
+++ b/packages/webview_utils/src/features/mdx/embeddable_mdx_components/auto_inserted/auto_inserted_code_block/code_block_styles.scss
@@ -9,6 +9,8 @@ figure[data-rehype-pretty-code-figure] {
 
   background-color: var(--color-fd-card);
   position: relative;
+  display: inline-block;
+  width: 100%;
   color: var(--color-fd-card-foreground);
   @apply rounded border;
 
